--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ten Miles</title>
     <link rel="shortcut icon" href="assets/favicon.ico">
-
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,700" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/reset.css" />
     <link rel="stylesheet" href="/assets/css/main.css" />
     <script type='text/javascript' src='/assets/javascript/bundle.js'></script>
